--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[target.'cfg(target_os = "macos")'.dependencies]
+[dependencies]
 mac-notification-sys = "0.3"
+clap = "~2.27.0"
